<resources>
    <string name="app_name">UNIT CONVERTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="length">LENGTH</string>
    <string name="volume">VOLUME</string>
    <string name="speed">SPEED</string>
    <string name="weight">WEIGHT</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="time">TIME</string>
    <string name="area">AREA</string>
    <string name="result">"  "</string>
    <string name="convert">CONVERT</string>
    <string name="enter_value">Enter value&#8230;</string>
</resources>